[#] Quick optimization for tags and relations sorting.